# tn3270s

./: Cargo.toml  shell.nix
examples/: demo3270.rs
src/: encoding.rs  lib.rs  main.rs  tn3270.rs
src/encoding/: cp037.rs
src/tn3270/: screen.rs  stream.rs
