[package]
name = "tn3270s"
version = "0.1.0"
authors = ["TQ Hirsch <thequux@thequux.com>"]
edition = "2018"
description = "TN3270 telnet server"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libtelnet-rs = "1.1.0"
structopt = "0.3.20"
anyhow = "1.0.33"
thiserror = "1.0.21"
bitflags = "1.2.1"
hex = "0.4.2"
snafu = "0.6.9"